为datepicker添加显示位置配置项；fix dropdown在延迟加载数据时报label设置错误bug；fix dialog在嵌套使用时z-index设置异常bug

--- a/datepicker/avalon.datepicker.scss
+++ b/datepicker/avalon.datepicker.scss
@@ -1,4 +1,3 @@
-
 @import "../chameleon/oniui-theme";
 $uiname: "oni-datepicker";
 $uiname-dropdown: "oni-dropdown";
@@ -44,6 +43,16 @@ $uiname-dropdown: "oni-dropdown";
     box-shadow: 2px 2px 3px 0 rgba(0, 0, 0, 0.1);
     position: absolute;
     background: #fff;
+}
+.#{$uiname}-wrapper-right {
+    right: -1px;
+}
+.#{$uiname}-wrapper-top {
+    bottom: 24px;
+}
+.#{$uiname}-wrapper-top-right {
+    bottom: 24px;
+    right: -1px;
 }
 .#{$uiname}-content {
     border: 1px solid #e5e5e5;
